Deployment/dev/k8sClusterDepAWSKOPS/modules/fluentd-ui/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fluentd-ui-deployment
  namespace: efk
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fluentd-ui
  template:
    metadata:
      labels:
        app: fluentd-ui
    spec:
      containers:        
        - name: fluentd-ui-container
          imagePullPolicy: Always
          image: 'mufazzal/hellonode-fluentd-ui:v1'
          ports:
            - containerPort: 9292
          volumeMounts:
          - name: varlog
            mountPath: /var/log/flui        
  volumes:
  - name: varlog
    hostPath:
      path: /var/log
