Deployment/dev/k8sClusterDepAWSKOPS/modules/fluentd-ui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: efk
  name: fluentd-ui-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"  
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: 'fdui.hn.com'
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fluentd-ui-cluster-ip
                port:
                  number: 9292
